--- a/wp-content/themes/lbilimited/scss/partials/_footer.scss
+++ b/wp-content/themes/lbilimited/scss/partials/_footer.scss
@@ -11,7 +11,7 @@
 			text-decoration: none;
 			padding: 48px;
 			height: 0;
-			padding-bottom: 472px;
+			padding-bottom: 32.7%;
 			position: relative;
 			.content-wrapper {
 				position: relative;
