--- a/wp-content/themes/lbilimited/scss/partials/_responsive.scss
+++ b/wp-content/themes/lbilimited/scss/partials/_responsive.scss
@@ -45,6 +45,7 @@
 		}
 	}
 */
+
 }
 @media (max-width: 1150px){
 	.specialists_wrapper {
@@ -238,6 +239,10 @@
 				visibility: hidden;
 			}
 		}
+	}
+	
+	header.site-header:not(.single){
+		height: 75vh;
 	}
 	
 	  ////////////////
